tooltip component , social links components and css changes

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,13 +4,13 @@
 
 @layer base {
 	body {
-		@apply dark:bg-[#1d201f] transition duration-500;
+		@apply dark:bg-[#111111] transition duration-500;
 	}
 }
 
 @layer components {
 	.page {
 		@apply min-h-screen;
-		@apply px-[2rem] md:px-[5rem] lg:px-[10rem] xl:px-[15rem] py-[2rem];
+		@apply px-[2rem] md:px-[5rem] lg:px-[10rem] xl:px-[15rem] py-[7rem];
 	}
 }
