--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,6 +11,13 @@
 @layer components {
 	.page {
 		@apply min-h-screen;
-		@apply px-[2rem] md:px-[5rem] lg:px-[10rem] xl:px-[15rem] py-[7rem];
+		@apply transition-[padding] duration-300;
+		@apply px-[1.8rem] md:px-[4.8rem] lg:px-[9.8rem] xl:px-[14.8rem] 2xl:px-[20rem] py-[7rem];
+	}
+	.paragraph {
+		@apply w-full duration-500 text-justify xl:text-start text-xl xl:w-[75%] leading-8  text-[#0008] dark:text-[#a1a1a1] mb-5;
+	}
+	.header2 {
+		@apply mt-20 mb-5 text-3xl font-semibold duration-500 dark:text-[#bdbdbd] text-[#3c3c3c];
 	}
 }
