--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,15 +21,15 @@
 	.page {
 		@apply min-h-screen;
 		@apply transition-[padding] duration-300;
-		@apply px-[1.8rem] md:px-[4.8rem] lg:px-[9.8rem] xl:px-[14.8rem] 2xl:px-[20rem] pb-[10rem] pt-[10rem] md:pt-[14rem];
+		@apply px-[1.8rem] md:px-[4.8rem] lg:px-[9.8rem] xl:px-[14.8rem] 2xl:px-[20rem] pb-[10rem] pt-[10rem] md:pt-[12rem];
 	}
 	.paragraph {
-		@apply w-full duration-500 text-justify xl:text-start text-lg leading-8  text-[#4b4b4b] dark:text-[#a1a1a1] mb-5;
+		@apply w-full duration-500 text-justify xl:text-start text-lg leading-8  text-[#7b7b7b] dark:text-[#a1a1a1] mb-5;
 	}
 	.header2 {
 		@apply mt-20 mb-10 text-[2rem] font-semibold duration-500 dark:text-[#e2e2e2] text-[#2a2a2a];
 	}
 	.highlight {
-		@apply font-bold duration-500;
+		@apply font-bold duration-500 text-black dark:text-white;
 	}
 }
