--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,19 @@
 .asd {
 	font-family: "Nanum Pen Script", cursive;
 }
+
+.asdd:before {
+	content: "";
+	position: absolute;
+	left: -2px;
+	right: -2px;
+	top: -2px;
+	z-index: 10;
+	bottom: -2px;
+
+	border-radius: 4px;
+}
+
 @layer base {
 	body {
 		@apply dark:bg-[#111111] transition duration-500;
@@ -20,7 +33,7 @@
 @layer components {
 	.page {
 		@apply min-h-screen;
-		@apply transition-[padding] duration-300;
+		@apply transition-[padding] duration-100;
 		@apply px-[1.8rem] md:px-[4.8rem] lg:px-[9.8rem] xl:px-[14.8rem] 2xl:px-[20rem] pb-[10rem] pt-[10rem] md:pt-[12rem];
 	}
 	.paragraph {
@@ -30,6 +43,6 @@
 		@apply mt-20 mb-10 text-[2rem] font-semibold duration-500 dark:text-[#e2e2e2] text-[#2a2a2a];
 	}
 	.highlight {
-		@apply font-bold duration-500 text-black dark:text-white;
+		@apply font-bold text-black duration-500 dark:text-white;
 	}
 }
