--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,10 +19,10 @@
 	border-radius: 4px;
 }
 .rs {
-	font-size: clamp(5rem, 8vw, 8vw);
+	font-size: clamp(5rem, 8vw, 6.5rem);
 }
 .fe {
-	font-size: clamp(2rem, 3.5vw, 5rem);
+	font-size: clamp(2rem, 3.5vw, 3.5rem);
 }
 @layer base {
 	body {
@@ -37,11 +37,14 @@
 	font-display: swap;
 }
 @layer components {
+	.navigation__bar {
+		@apply right-0 z-[150] fixed left-0   transition-all duration-500 px-[2rem] md:backdrop-blur-lg  md:bg-white/50 py-7 flex items-center justify-between dark:bg-[#111111] md:dark:bg-[#111111dc] bg-white  dark:border-[#1f2020];
+	}
 	.hero {
 		@apply flex justify-center md:justify-start min-h-[60vh] w-full items-center h-full mb-[15rem]  md:mb-[20rem];
 	}
 	.rs {
-		@apply py-1 font-bold transition leading-[5rem] md:leading-[8rem];
+		@apply py-1 font-bold transition leading-[5rem] lg:leading-[7rem];
 	}
 	.fe {
 		@apply font-semibold  bg-gradient-to-r  from-[#99cc5f] to-[#4557e0] dark:from-[#fcff50] dark:to-[#87fff7] -translate-y-2    dark:opacity-60 opacity-40 w-max bg-clip-text text-transparent py-1;
