--- a/styles/globals.css
+++ b/styles/globals.css
@@ -32,7 +32,7 @@
 
 @layer components {
 	.resume {
-		@apply flex items-center justify-start gap-3 px-4 py-2 transition-all duration-500 ease-in-out rounded-md md:ml-5 dark:text-white w-max;
+		@apply flex items-center justify-start gap-3 px-4 py-2 ease-in-out rounded-md md:ml-5 dark:text-white w-max;
 	}
 	.app {
 		@apply w-full overflow-x-hidden;
