--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,75 +4,76 @@
 @import "@fontsource/nanum-pen-script";
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap");
 .asd {
-	font-family: "Nanum Pen Script", cursive;
+  font-family: "Nanum Pen Script", cursive;
 }
 
 .asdd:before {
-	content: "";
-	position: absolute;
-	left: -2px;
-	right: -2px;
-	top: -2px;
-	z-index: 10;
-	bottom: -2px;
+  content: "";
+  position: absolute;
+  left: -2px;
+  right: -2px;
+  top: -2px;
+  z-index: 10;
+  bottom: -2px;
 
-	border-radius: 4px;
+  border-radius: 4px;
 }
 .rs {
-	font-size: clamp(5rem, 8vw, 6.5rem);
+  font-size: clamp(5rem, 8vw, 6.5rem);
+  padding-bottom: 15px;
 }
 .fe {
-	font-size: clamp(1.5rem, 3.5vw, 3.5rem);
+  font-size: clamp(1.5rem, 3.5vw, 3.5rem);
 }
 @layer base {
-	body {
-		@apply dark:bg-[#111111] transition duration-500;
-	}
+  body {
+    @apply dark:bg-[#111111] transition duration-500;
+  }
 }
 
 @layer components {
-	.resume {
-		@apply flex items-center justify-start gap-3 px-4 py-2 ease-in-out rounded-md md:ml-5 dark:text-white w-max;
-	}
-	.app {
-		@apply w-full overflow-x-hidden;
-	}
-	.mobile__nav {
-		@apply fixed overflow-hidden md:overflow-visible transition-[bottom_color] md:transition-[bottom] duration-700 left-0 right-0 flex flex-col items-center bg-white shadow-lg md:bg-transparent  md:gap-3 md:flex-row top-[-5px] mt-20 md:static  md:leading-none md:shadow-none md:mt-0 dark:bg-[#111111] marker:md:bg-transparent md:dark:bg-transparent dark:shadow-white/10;
-	}
-	.navigation__bar {
-		@apply right-0 z-[200] fixed left-0   transition-all duration-500 px-[2rem] md:backdrop-blur-lg  md:bg-white/50 py-7 flex items-center justify-between dark:bg-[#111111] md:dark:bg-[#111111dc] bg-white  dark:border-[#1f2020];
-	}
-	.hero {
-		@apply flex justify-center md:justify-start min-h-[40vh] w-full items-center h-full mb-[15rem]  md:mb-[20rem] mt-16 md:mt-20;
-	}
-	.rs {
-		@apply py-1 font-bold transition leading-[5rem] lg:leading-[7rem];
-	}
-	.fe {
-		@apply font-semibold  bg-gradient-to-r  from-[#49a4caf0] to-[#eac018] dark:from-[#fcff50] dark:to-[#87fff7] -translate-y-2    dark:opacity-60 opacity-70 w-max bg-clip-text text-transparent py-1;
-	}
-	.hello {
-		@apply text-3xl absolute left-[50%] -translate-x-[50%] md:left-[3.5rem] asd top-[-1.5rem] text-black transition after:translate-x-1.5 translate-y-3 dark:text-white;
-	}
-	.colorful_text {
-		@apply bg-gradient-to-r  from-[#191654] to-[#43c6ac] dark:from-[#7069f4] dark:to-[#abedf3] bg-clip-text text-transparent;
-	}
-	.page {
-		@apply min-h-screen;
-		@apply transition-[padding] duration-100;
-		@apply px-[1.8rem] md:px-[4.8rem] lg:px-[9.8rem] xl:px-[10.8rem] 2xl:px-[20rem] pb-[4rem] pt-[10rem] md:pt-[12rem];
-	}
-	.footer {
-		@apply px-[1.8rem] md:px-[4.8rem] lg:px-[9.8rem] xl:px-[10.8rem] 2xl:px-[20rem];
-	}
-	.paragraph {
-		@apply w-full duration-500 md:tracking-[.02rem] text-justify text-lg  font-[300]  text-[#7b7b7b] dark:text-[#a1a1a1] mb-5;
-	}
-	.header2 {
-		@apply mt-20 mb-10 text-[2rem] font-semibold dark:text-[#e2e2e2] text-[#2a2a2a];
-	}
-	.highlight {
-		@apply font-medium text-[#4e4e4e] duration-500 dark:text-[#e1e08f];
-	}
+  .resume {
+    @apply flex items-center justify-start gap-3 px-4 py-2 ease-in-out rounded-md md:ml-5 dark:text-white w-max;
+  }
+  .app {
+    @apply w-full overflow-x-hidden;
+  }
+  .mobile__nav {
+    @apply fixed overflow-hidden md:overflow-visible transition-[bottom_color] md:transition-[bottom] duration-700 left-0 right-0 flex flex-col items-center bg-white shadow-lg md:bg-transparent  md:gap-3 md:flex-row top-[-5px] mt-20 md:static  md:leading-none md:shadow-none md:mt-0 dark:bg-[#111111] marker:md:bg-transparent md:dark:bg-transparent dark:shadow-white/10;
+  }
+  .navigation__bar {
+    @apply right-0 z-[200] fixed left-0   transition-all duration-500 px-[2rem] md:backdrop-blur-lg  md:bg-white/50 py-7 flex items-center justify-between dark:bg-[#111111] md:dark:bg-[#111111dc] bg-white  dark:border-[#1f2020];
+  }
+  .hero {
+    @apply flex justify-center md:justify-start min-h-[40vh] w-full items-center h-full mb-[15rem]  md:mb-[20rem] mt-16 md:mt-20;
+  }
+  .rs {
+    @apply py-1 font-bold transition leading-[5rem] lg:leading-[7rem];
+  }
+  .fe {
+    @apply font-semibold  bg-gradient-to-r  from-[#49a4caf0] to-[#eac018] dark:from-[#fcff50] dark:to-[#87fff7] -translate-y-2    dark:opacity-60 opacity-70 w-max bg-clip-text text-transparent py-1;
+  }
+  .hello {
+    @apply text-3xl absolute left-[50%] -translate-x-[50%] md:left-[3.5rem] asd top-[-1.5rem] text-black transition after:translate-x-1.5 translate-y-3 dark:text-white;
+  }
+  .colorful_text {
+    @apply bg-gradient-to-r  from-[#191654] to-[#43c6ac] dark:from-[#7069f4] dark:to-[#abedf3] bg-clip-text text-transparent;
+  }
+  .page {
+    @apply min-h-screen;
+    @apply transition-[padding] duration-100;
+    @apply px-[1.8rem] md:px-[4.8rem] lg:px-[9.8rem] xl:px-[10.8rem] 2xl:px-[20rem] pb-[4rem] pt-[10rem] md:pt-[12rem];
+  }
+  .footer {
+    @apply px-[1.8rem] md:px-[4.8rem] lg:px-[9.8rem] xl:px-[10.8rem] 2xl:px-[20rem];
+  }
+  .paragraph {
+    @apply w-full duration-500 md:tracking-[.02rem] text-justify text-lg  font-[300]  text-[#7b7b7b] dark:text-[#a1a1a1] mb-5;
+  }
+  .header2 {
+    @apply mt-20 mb-10 text-[2rem] font-semibold dark:text-[#e2e2e2] text-[#2a2a2a];
+  }
+  .highlight {
+    @apply font-medium text-[#4e4e4e] duration-500 dark:text-[#e1e08f];
+  }
 }
